# gesti-pc

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  main.py  pyproject.toml  requirements.txt  tox.ini
gestipc/: manage.py
gestipc/certifications/: admin.py  models.py  urls.py  views.py
gestipc/certifications/migrations/: 0001_initial.py  0002_alter_trainingclass_equipment_required_and_more.py
gestipc/core/: admin.py  forms.py  models.py  views.py
gestipc/core/migrations/: 0001_initial.py  0002_alter_profile_profile_picture.py  0002_alter_profile_telegram_user_id.py  0002_rename_user_profile_fkuser_profile_address_and_more.py  0002_save_permissions.py  0003_create_default_user_groups.py  0003_profile_telegram_user_id_alter_profile_fkuser_and_more.py  (+2 more)
gestipc/core/templates/core/: style.j2  (+2 more)
gestipc/gestipc/: asgi.py  settings.py  urls.py  wsgi.py
gestipc/hr/: admin.py  models.py  urls.py  views.py
gestipc/pcroncellobot/: credentials.py  processors.py
gestipc/servizio/: admin.py  apps.py  models.py  urls.py  views.py
gestipc/tg_bot/: __init__.py  admin.py  apps.py  bot.py  credentials.py  processors.py  signals.py  urls.py  views.py
gestipc/warehouse/: admin.py  forms.py  models.py  urls.py  views.py
src/: manage.py
src/campo/: apps.py
src/gesti_pc/: asgi.py  settings.py  urls.py  wsgi.py
src/magazzino/: admin.py  models.py
src/servizio/: admin.py  apps.py  models.py  signals.py  tests.py
src/tg_bot/: admin.py  allertalom.py  bot.py  models.py  tests.py  views.py
src/volontario/: admin.py  apps.py  codicefiscale.py  models.py
(+53 files in other folders)
