[project]
name = "gesti-pc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=6.0.1",
    "pillow>=11.0.0", # barcode reading
    "pyzbar>=0.1.9",  # barcode reading
    "python-codicefiscale>=0.11.2",
    "python-telegram-bot[job-queue]>=22.5",
]

[dependency-groups]
dev = [
    "ruff>=0.14.11",
]
