[project]
name = "gesti-pc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=6.0.1",
    "python-codicefiscale>=0.11.2",
    "python-telegram-bot[job-queue]>=22.5",
    "gunicorn>=23.0.0",
]

[dependency-groups]
dev = [
    "ruff>=0.14.11",
]
